# learnffmpeg

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  mp4_h264_mock_interview.md  parse_frame_types.cpp  process  sps_pps_hex_quickref.md  todo.md
CodePratice/4_paser_mp4_box/: main.cpp
CodePratice/5_parser_TS_packet/: main.cpp
Doc/: Android图形渲染.md  README.md  avframe_avpacket_guide.md  avsampleformat_interview_guide.md  ffmpeg_avcodec_vs_context.md  ffmpeg_cmake_questions.md  ffmpeg_resource_lifecycle_notes.md  hardware_codec_learning_guide.md  mp4-2-ts.md  swscontext_lecture.md  图像格式与内存排布_CPU_GPU读写.md  码率-Profile.md  硬件编解码.md  硬解输出帧_surface_buffer_IBP_速记.md
WebRTC/: 项目Task.md
av_interview/: h264_mp4_面试速记.md  network_protocols.md  网络协议通关指南.md  音视频开发常见问题与解析.md
back/: Q1自评报告.md  VideoQueue3_AJB_分析.md  seek优化.md  自动剪辑优化.md
ffmpegLearn/: 音视频中高级开发学习与职业规划.md  项目
learnTarget/: FFmpeg核心基础与理论讲义.md  FFmpeg还有竞争力吗与学习策略总结.md  WebRTC实战指南.md  下一步行动计划.md  学习目标.md  学习目标.txt  项目.md
learnTarget/scripts/: check_glm_key.py  cursor_monetization.md  methodology_examples.md
mp4_to_ts/: LEARNING_PLAN.md  compile_commands.json
mp4_to_ts/assignments/: 5.cpp  README.md  assignment_1.md  assignment_2.md  assignment_3.md  assignment_4.md  assignment_5.md
mp4_to_ts/code/: .clangd  ffmpeg_core_structs_explained.md  main.cpp  process
mp4_to_ts/docs/: 01_mp4_format.md  02_ts_format.md  03_ffmpeg_demux.md  04_mp4_to_ts_transcode.md  05_cpp_mp4_to_ts.md
mp4_to_ts/solutions/: README.md
project/1_transcoder/: CMakeLists.txt  DESIGN.md  初学者转码代码讲解.md
project/1_transcoder/scripts/: make_sample.sh
project/1_transcoder/src/: main.cpp
project/2_video_2_image/: CMakeLists.txt  main.cpp
project/3_Gemini-ASK/: gemini_task.py
project/3_my_trancoder/: main.cpp
project/5_trancoder_new/: CMakeLists.txt  README.md  main.cpp
project/6_media_core/: .clangd  CLASS_DESIGN_GUIDE.md  CMakeLists.txt  README.md  TARGET.md  compile_flags.txt  media_core.code-workspace
project/6_media_core/demo/: filter_demo.cpp  transcode_demo.cpp  trim_demo.cpp
project/6_media_core/include/media_core/common/: ffmpeg_raii.h  status.h
project/6_media_core/include/media_core/config/: transcode_config.h
project/6_media_core/include/media_core/factory/: codec_factory.h
project/6_media_core/include/media_core/interfaces/: capability_probe.h  demuxer.h  frame_converter.h  muxer.h  video_decoder.h  video_encoder.h  video_filter.h
project/6_media_core/include/media_core/pipeline/: transcode_pipeline.h
project/6_media_core/src/: ffmpeg_components.cpp  transcode_pipeline.cpp
project/7_my_media_core/src/include/common/: status.h
project/7_my_media_core/src/include/config/: config.h
project/7_my_media_core/src/include/interface/: decoder.h
project/Video2Image/: main.cpp
project/filtergraph/: Record.txt
project/scripts/: practical_methodologies.md
project/transcoder/: .gitignore  CMakeLists.txt  DESIGN.md  ProjectRecorde.txt  README.md  项目记录.txt
project/transcoder/scripts/: validate_output.sh
project/transcoder/src/: main.cpp
